k8s-charts/auth_traefikForwardAuth.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfa-google
  namespace: auth
  labels:
    app: tfa-google
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfa-google
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tfa-google
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: thomseddon/traefik-forward-auth:2.2
        name: traefik-forward-auth
        ports:
        - containerPort: 4181
          protocol: TCP
        resources:
          limits:
            memory: 1024Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 0.1          
---
#
# Auth Service
#
apiVersion: v1
kind: Service
metadata:
  name: tfa-google
  namespace: auth
  labels:
    app: tfa-google
spec:
  type: ClusterIP
  selector:
    app: tfa-google
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181

# ---
# #
# # Auth Middleware
# #
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: traefik-forward-auth
# spec:
#   forwardAuth:
#     address: http://traefik-forward-auth:4181
#     authResponseHeaders:
#       - X-Forwarded-User
