k8s-charts/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ingress-controller
  namespace: ingress
  labels:
    k8s-app: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: ingress-controller
  template:
    metadata:
      labels:
        k8s-app: ingress-controller
        name: ingress-controller
    spec:
      # hostNetwork: true
      serviceAccountName: ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: traefik:v2.5
        imagePullPolicy: IfNotPresent        
        args:
        - --serversTransport.insecureSkipVerify=true
        - --providers.kubernetesingress=true
        - --providers.kubernetescrd
        - --entryPoints.traefik.address=:1080
        - --entryPoints.https.address=:443
        - --entrypoints.https.http.tls=true
        - --entryPoints.https.forwardedHeaders.insecure=true
        # - --entryPoints.dialog.address=:4443
        # - --entrypoints.dialog.http.tls=true
        # - --entryPoints.dialog.forwardedHeaders.insecure=true
        - --entryPoints.turn.address=:5349
        - --entrypoints.turn.http.tls=true
        - --entryPoints.turn.forwardedHeaders.insecure=true        
        - --api
        - --api.insecure
        - --accesslog
        - --log.level=INFO
        - --pilot.dashboard=false
        - --entryPoints.http.address=:80
        - --entrypoints.http.http.redirections.entryPoint.to=https
        - --entrypoints.http.http.redirections.entryPoint.scheme=https
        - --entrypoints.http.http.redirections.entrypoint.permanent=true
        - --metrics.prometheus=true
        resources:
          requests:
            memory: 0.2Gi
            cpu: 0.1
          limits:
            memory: 4Gi
            cpu: 2
      - name: haproxy 
        image: haproxytech/kubernetes-ingress:1.7.0
        args:
        - --https-bind-port=4443
        - --disable-http
        - --ingress.class=haproxy
        - --log=trace #error warning info debug trace
        - --default-ssl-certificate=ingress/dummy-haproxy-cert
        securityContext:
          runAsUser:  1000
          runAsGroup: 1000
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
        resources:
          requests:
            memory: 0.2Gi
            cpu: 0.1
          limits:
            memory: 4Gi
            cpu: 2
        livenessProbe:
          httpGet:
            path: /healthz
            port: 1042
---
apiVersion: v1
kind: Service
metadata:
  name: lb
  namespace: ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: ssl
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:558986605633:certificate/47d305ab-f861-470b-a837-98ca52a76e17
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443,4443,5349
    service.beta.kubernetes.io/aws-load-balancer-alpn-policy: HTTP2Preferred      
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    k8s-app: ingress-controller
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443   
  - name: dialog
    port: 4443
    targetPort: 4443
  - name: turn
    port: 5349
    targetPort: 5349
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: ingress
spec:
  selector:
    k8s-app: ingress-controller
  ports:
  - name: dashboard
    port: 1080
    targetPort: 1080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: ingress
  # annotations:
  #   ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
spec:
  entryPoints:
    - https
    # - web
  routes:
  - kind: Rule
    match: Host(`traefik.myhubs.net`) && PathPrefix(`/`)
    middlewares:                    
    - name: turkeyauth         
      namespace: ingress
    services:                       
    - kind: Service
      name: dashboard
      namespace: ingress
      passHostHeader: true
      port: 1080
---
################### middlewares ##########################
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: turkeyauth
  namespace: ingress
spec:
  forwardAuth:
    address: http://auth.turkey-services:9001/authn
    authResponseHeaders:
      - X-Forwarded-User
    trustForwardHeader: true
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: rewrite4cdn
#   namespace: ingress
# spec:
#   stripPrefix:
#     prefixes: 
#       - /_cdn    
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: internal-ip-whitelist
#   namespace: ingress
# spec:
#   ipWhiteList:
#     sourceRange:
#       # - 10.0.0.0/16
#       - 73.53.171.231/32  # gtan@mozilla.com
#     # ipStrategy:
#     #   depth: 2
####################################################################################
################################### RBAC ###########################################
####################################################################################
