k8s-charts/turkey-services.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: turkey-services
---
####################################################################################
####################################### auth #######################################
####################################################################################  
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: turkey-auth
  namespace: turkey-services
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`auth.myhubs.net`) && PathPrefix(`/`)
    # middlewares:
    # - name: turkeyauth
    #   namespace: turkey-services
    services:
    - kind: Service
      name: auth
      passHostHeader: true
      port: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: turkey-services
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth
    spec:
      # terminationGracePeriodSeconds: 3
      containers:
      - image: mozillareality/turkeyauth:64
        imagePullPolicy: IfNotPresent
        name: turkeyauth
        resources:
          limits:
            memory: 1024Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 0.1   
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: turkey-services
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: http
    port: 9001
    targetPort: 9001
---
####################################################################################
######################################### api ######################################
####################################################################################
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`api.myhubs.net`) && PathPrefix(`/`)
    middlewares:
    - name: turkeyauth
      namespace: turkey-services
    services:
    - kind: Service
      name: turkey-api
      passHostHeader: true
      port: 888
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: turkeyauth
  namespace: turkey-services
spec:
  forwardAuth:
    address: http://auth.turkey-services:9001/authn
    authResponseHeaders:
      - X-Forwarded-User
      - X-Forwarded-UserEmail
      - X-Forwarded-UserPicture
    trustForwardHeader: true      
---
apiVersion: apps/v1
kind: Deployment                                          
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turkey-api
  minReadySeconds: 15                                      
  template:
    metadata:
      labels:
        app: turkey-api
    spec:
      serviceAccountName: api-sa
      containers:
      - image: mozillareality/turkeyapi:15
        imagePullPolicy: IfNotPresent
        name: turkey-orc
        livenessProbe:
          httpGet:
            path: "http://turkey-api.turkey-services/Healthz"
            port: 888
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 120
        resources:
          limits:
            memory: 1024Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 0.1
      imagePullSecrets:
      - name: regcred      
---
apiVersion: v1
kind: Service
metadata:
  name: turkey-api
  namespace: turkey-services
spec:
  ports:
  - name: http
    port: 888
    targetPort: 888
  selector:
    app: turkey-api
