k8s-charts/turkey_dev0.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev0
######################################################################################
###################################### ingress #######################################
######################################################################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turkey
  namespace: dev0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
spec:
  rules:
  - host: dev0-assets.myhubs.net
    http:
      paths:
      - path: /files/
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000
      - path: /http
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubs
            port: 
              number: 8080
  - host: dev0.myhubs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ret
            port: 
              number: 4000               
########################################################################
###################### configs #######################################
########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reticulum
  namespace: dev0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reticulum
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reticulum
    spec:
      containers:
        - name: reticulum
          image: mozillareality/ret:17
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: "http://reticulum.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
          resources:
            limits:
              memory: 512Mi
              cpu: 0.8
            requests:
              memory: 256Mi
              cpu: 0.2
---
apiVersion: v1
kind: Service
metadata:
  name: ret
  namespace: dev0
spec:
  clusterIP: None
  ports:
  - name: https-reticulum
    port: 4000
    targetPort: 4000
  selector:
    app: reticulum            

########################################################################
######################   hubs   ########################################
########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubs
  namespace: dev0
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: hubs
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hubs
    spec:
      containers:
        - name: hubs
          image: mozillareality/hubs:19
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: "http://hubs.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: hubs
  namespace: dev0
spec:
  clusterIP: None
  ports:
  - name: https-hubs
    port: 8080
    targetPort: 8080
  selector:
    app: hubs
########################################################################
######################   dialog   ######################################
########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dialog
  namespace: dev0
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: dialog                                          
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1                                         
  template:
    metadata:
      labels:
        app: dialog
    spec:
      containers:
        - image: mozillareality/dialog:dev
          imagePullPolicy: Always
          name: dialog
          livenessProbe:
            httpGet:
              path: "http://dialog.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: dialog
  namespace: dev0
spec:
  ports:
  - name: dialog
    port: 4443
    targetPort: 4443
  - name: dialog-adm
    port: 7000
    targetPort: 7000
  selector:
    app: dialog            
########################################################################
######################   coturn   ######################################
########################################################################
---
apiVersion: apps/v1
kind: DaemonSet                                          
metadata:
  name: coturn
  namespace: dev0
spec:
  selector:
    matchLabels:
      app: coturn                                          
  minReadySeconds: 15                                      
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
        - image: mozillareality/coturn:dev
          imagePullPolicy: Always
          name: coturn
          livenessProbe:
            httpGet:
              path: "http://coturn.dev0"
              port: 1111
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: coturn
  namespace: dev0
spec:
  ports:
  - name: coturn
    port: 5349
    targetPort: 5349
  selector:
    app: coturn
